--- a/package.json
+++ b/package.json
@@ -19,8 +19,18 @@
     "@preline/dropdown": "^2.6.0",
     "@preline/tree-view": "^2.6.0",
     "@trendyol-js/react-carousel": "^3.0.3",
+    "axios": "^1.7.9",
+    "bootstrap-icons": "^1.11.3",
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
+    "embla-carousel-react": "^8.5.2",
+    "express": "^4.21.2",
     "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
+    "framer-motion": "^12.4.3",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.474.0",
+    "nuka-carousel": "^8.2.0",
     "preline": "^2.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
