--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.3",
+    "js-cookie": "^3.0.5",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.474.0",
+    "moment-jalaali": "^0.10.4",
     "nuka-carousel": "^8.2.0",
     "preline": "^2.7.0",
     "prop-types": "^15.8.1",
@@ -40,9 +42,11 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.0",
-    "taos": "^1.0.5"
+    "taos": "^1.0.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
