--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.4.7",
     "@popperjs/core": "^2.11.8",
     "@preline/accordion": "^2.6.0",
     "@preline/carousel": "^2.6.0",
