--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@preline/dropdown": "^2.6.0",
     "@preline/tree-view": "^2.6.0",
     "@trendyol-js/react-carousel": "^3.0.3",
+    "arabic-reshaper": "^1.1.0",
     "axios": "^1.8.4",
     "bootstrap-icons": "^1.11.3",
     "cheerio": "^1.0.0",
@@ -46,7 +47,9 @@
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "rtl-css-js": "^1.16.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.17",
     "swiper": "^11.2.0",
     "taos": "^1.0.5",
     "zustand": "^5.0.3"
