--- a/package.json
+++ b/package.json
@@ -5,69 +5,71 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --emptyOutDir",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm install && npm run build"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@material-tailwind/react": "^2.1.10",
-    "@mui/material": "^6.4.7",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.15.7",
     "@popperjs/core": "^2.11.8",
-    "@preline/accordion": "^2.6.0",
-    "@preline/carousel": "^2.6.0",
-    "@preline/dropdown": "^2.6.0",
-    "@preline/tree-view": "^2.6.0",
+    "@preline/accordion": "^2.0.0",
+    "@preline/carousel": "^2.0.0",
+    "@preline/dropdown": "^2.0.0",
+    "@preline/tree-view": "^2.0.0",
     "@trendyol-js/react-carousel": "^3.0.3",
     "arabic-reshaper": "^1.1.0",
-    "axios": "^1.8.4",
+    "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.3",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "embla-carousel-react": "^8.5.2",
-    "express": "^4.21.2",
-    "flowbite": "^2.5.2",
+    "embla-carousel-react": "^8.0.0",
+    "express": "^4.18.2",
+    "flowbite": "^2.2.1",
     "flowbite-react": "^0.10.2",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "keen-slider": "^6.8.6",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.330.0",
     "moment-jalaali": "^0.10.4",
-    "nuka-carousel": "^8.2.0",
-    "preline": "^2.7.0",
+    "nuka-carousel": "^8.0.0",
+    "preline": "^2.0.0",
     "prop-types": "^15.8.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-id-swiper": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.1.3",
-    "react-slick": "^0.30.3",
-    "react-toastify": "^11.0.5",
+    "react-router-dom": "^6.22.0",
+    "react-slick": "^0.30.0",
+    "react-toastify": "^10.0.4",
     "rtl-css-js": "^1.16.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.17",
-    "swiper": "^11.2.0",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.5",
     "taos": "^1.0.5",
-    "zustand": "^5.0.3"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/node": "^22.14.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.2.2"
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.0"
   }
 }
