--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mapbox/polyline": "^1.2.1",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.4.7",
+    "@neshan-maps-platform/mapbox-gl-react": "^1.0.3",
     "@popperjs/core": "^2.11.8",
     "@preline/accordion": "^2.6.0",
     "@preline/carousel": "^2.6.0",
